# tiktok-popularity-analysis

./: Analise_da_Popularidade_no_TikTok.ipynb  Analise_da_Popularidade_no_TikTok_Univariada.ipynb  README.md  analysis.ipynb  artist_data.csv  get_artist_popularity.py  pyproject.toml  requirements.txt  tiktok.ipynb  zero_and_one.py
beta-inflada/: inflated-beta-mixture.ipynb
