[tool.poetry]
name = "tiktok-popularity-analysis"
version = "0.1.0"
description = ""
authors = ["Lucas Ciziks"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
ipykernel = "^6.23.1"
spotipy = "^2.23.0"
lightgbm = "^3.3.5"
ipywidgets = "^8.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
